# rknn_yolov5_3588_bytetrack

./: CMakeLists.txt  build-linux_RK3588.sh
include/: dataType.h
src/: STrack.cpp  bytetrack.cpp
